Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
        <p>
 
        </p> <!-- Surprise Button -->
-        <button class="surprise-btn" onclick="showLoveLetter()">Surprise 🎁</button>
+        <button class="surprise-btn" onclick="showLoveLetter()">Gift🎁</button>
         
         <!-- Final Button -->
-        <button class="final-btn" onclick="showEishPopup()">Eish💖</button>
+        <button class="final-btn" onclick="showEishPopup()">Eish❤</button>
     </div>
 
     <!-- Love Letter Popup -->
@@ -262,4 +262,5 @@
         createHearts();
     </script>
 </body>
+
 </html>
